feat(alert): add geographic location tracking to alert events
This commit introduces GeographicLocation support across the alert event system. The key changes include adding a location field to AlertEvent, updating factory methods and services to capture and propagate location data, and implementing a repository method to retrieve the most recent event location.